@@ -1,11 +1,8 @@
 package com.app.unify.services;
 
 import jakarta.transaction.Transactional;
-
-import java.util.List;
-import java.util.stream.Collectors;
-
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.messaging.simp.SimpMessageSendingOperations;
 import org.springframework.stereotype.Service;
 
@@ -14,40 +11,77 @@ import com.app.unify.entities.Notification;
 import com.app.unify.mapper.NotificationMapper;
 import com.app.unify.repositories.NotificationRepository;
 
+import java.util.List;
+
 @Service
 @Transactional
 public class NotificationService {
 
-    @Autowired
-    private NotificationRepository notificationRepository;
+    private final NotificationRepository notificationRepository;
+    private final SimpMessageSendingOperations messageSendingOperations;
+    private final NotificationMapper notificationMapper;
 
     @Autowired
-    private SimpMessageSendingOperations messageSendingOperations;
-
-    @Autowired
-    private NotificationMapper notificationMapper;
+    public NotificationService(
+            NotificationRepository notificationRepository,
+            SimpMessageSendingOperations messageSendingOperations,
+            NotificationMapper notificationMapper) {
+        this.notificationRepository = notificationRepository;
+        this.messageSendingOperations = messageSendingOperations;
+        this.notificationMapper = notificationMapper;
+    }
 
     public void createAndSendNotification(NotificationDTO notificationDTO) {
         Notification notification = notificationMapper.toNotification(notificationDTO);
         notificationRepository.save(notification);
-        messageSendingOperations.convertAndSendToUser(notification.getUserId(), "/queue/notifications", notification);
+        sendNotificationToUser(notification.getUserId(), notification);
     }
 
+    @Cacheable(value = "notifications", key = "#userId")
     public List<NotificationDTO> getNotificationsByUserID(String userId) {
-        return notificationRepository.findByUserIdOrderByTimestampDesc(userId).stream()
+        return notificationRepository.findByUserIdOrderByTimestampDesc(userId)
+                .stream()
                 .map(notificationMapper::toNotificationDTO)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public void markNotificationAsRead(Long notificationId, String userId) {
+        Notification notification = notificationRepository.findByIdAndUserId(notificationId, userId);
+        if (notification != null) {
+            notification.setRead(true);
+            notificationRepository.save(notification);
+            sendNotificationToUser(userId, notification);
+        }
+    }
+
+    @Transactional
+    public void markAllNotificationsAsRead(String userId) {
+        List<Notification> notifications = notificationRepository.findByUserIdOrderByTimestampDesc(userId);
+        if (!notifications.isEmpty()) {
+            notificationRepository.markAllAsReadByUserId(userId);
+            sendNotificationsToUser(userId, notifications);
+        }
     }
 
     public void sendAllNotifications() {
-        List<Notification> notifications = notificationRepository.findAll();
-        notifications.forEach(notification -> {
-            NotificationDTO notificationDTO = notificationMapper.toNotificationDTO(notification);
-            messageSendingOperations.convertAndSendToUser(
-                    notification.getUserId(),
-                    "/queue/notifications",
-                    notificationDTO
-            );
-        });
+        notificationRepository.findAll()
+                .forEach(this::sendSingleNotification);
+    }
+
+    // Helper methods
+    private void sendNotificationToUser(String userId, Notification notification) {
+        NotificationDTO dto = notificationMapper.toNotificationDTO(notification);
+        messageSendingOperations.convertAndSendToUser(userId, "/queue/notifications", dto);
+    }
+
+    private void sendNotificationsToUser(String userId, List<Notification> notifications) {
+        List<NotificationDTO> dtos = notifications.stream()
+                .map(notificationMapper::toNotificationDTO)
+                .toList();
+        messageSendingOperations.convertAndSendToUser(userId, "/queue/notifications", dtos);
+    }
+
+    private void sendSingleNotification(Notification notification) {
+        sendNotificationToUser(notification.getUserId(), notification);
     }
 }
